--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "css-loader": "^7.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "style-loader": "^4.0.0"
   }
 }
