--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^18.2.25",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
+    "mongodb": "^6.5.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
