--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mongoose": "^8.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "style-loader": "^4.0.0"
   }
 }
