--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "css-loader": "^7.1.1",
     "dotenv": "^16.4.5",
