--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "css-loader": "^7.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
