--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
