--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mongoose": "^8.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.23.0",
     "style-loader": "^4.0.0"
   }
