--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
     "babel-loader": "^9.1.3",
+    "concurrently": "^8.2.2",
     "html-webpack-plugin": "^5.6.0",
     "mongodb": "^6.5.0",
     "nodemon": "^3.1.0",
